@@ -2,15 +2,19 @@ package Getopt::Lucid::Cookbook;
 
 =head1 NAME
 
-Getopt::Lucid::Cookbook - Put abstract here 
+Getopt::Lucid::Cookbook - More complete recipies for usage
 
-=head1 SYNOPSIS
+=head1 TABLE OF CONTENTS
 
-  use Getopt::Lucid::Cookbook;
-  blah blah blah
+Under development.
 
-=head1 DESCRIPTION
+=head1 SEE ALSO
 
+=over
+
+=item * L<Getopt::Lucid>
+
+=back
 
 =head1 AUTHOR
 
@@ -30,9 +34,5 @@ it and/or modify it under the same terms as Perl itself.
 The full text of the license can be found in the
 LICENSE file included with this module.
 
-
-=head1 SEE ALSO
-
-perl(1).
-
 =cut
+
